deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular1-ingress
spec:
  rules:
    - host: angular1.hahn130.rnd.gic.ericsson.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 4400
